--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,14 @@ security.jwt.secret-key=3cfa76ef14937c1c0ea519f8fc057a80fcd04a7420f8e8bcd0a7567c
 # 1h in milliseconds
 security.jwt.expiration-time=3600000
 
+
+
+# ========= payment wallet Configuration  ========= #
+
+auth.server.url=https://ebankily-tst.appspot.com
+payment.server.url=https://ebankily-tst.appspot.com/payment
+transaction.server.url=https://ebankily-tst.appspot.com/checkTransaction
+auth.grant_type=password
+auth.username=SMARTDEV
+auth.password=12345
+auth.client_id=ebankily
