--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Reservation-des-Hotels
-server.port=9001
+server.port=9000
 spring.datasource.url=jdbc:postgresql://localhost:5432/BDProj
 spring.datasource.username=postgres
 spring.datasource.password=Ha497857
@@ -8,7 +8,15 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
 
+server.address=0.0.0.0
+
+
+image.upload.dir=C:\Pfe\Reservation_hotels\
+  
+image.upload.chambre.dir=C:\Pfe\Reservation_hotels\
 
 spring.jpa.open-in-view=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
