--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,41 @@
 spring.application.name=Reservation-des-Hotels
-server.port=9000
+server.address=0.0.0.0
+server.port=9001
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/BDProj
 spring.datasource.username=postgres
 spring.datasource.password=Ha497857
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
+spring.mvc.static-path-pattern=/hotel_photos/**
+spring.web.resources.static-locations=file:///C:/Pfe/Reservation_hotels/
+
+
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
-server.address=0.0.0.0
+
+upload.dir=uploads/
+upload.url=http://localhost:9000/files/
+
+spring.web.resources.static-locations=file:///C:/Pfe/Reservation_hotels/
+
+spring.jpa.hibernate.ddl-auto=update
+
+
+
+# Allow CORS for static resources
+spring.web.resources.chain.enabled=true
+spring.web.resources.chain.strategy.content.enabled=true
+spring.web.resources.chain.strategy.content.paths=/**
+
+
+# spring.mvc.static-path-pattern=/hotel_photos/**
+# spring.resources.static-locations=file:C:/Pfe/Reservation_hotels/hotel_photos/
 
 
 image.upload.dir=C:\Pfe\Reservation_hotels\
