--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,17 +22,27 @@ spring.servlet.multipart.max-request-size=50MB
 upload.dir=uploads/
 upload.url=http://localhost:9000/files/
 
-spring.web.resources.static-locations=file:///C:/Pfe/Reservation_hotels/
-
-spring.jpa.hibernate.ddl-auto=update
-
-
+EMAIL_HOST: smtp.gmail.com
+EMAIL_PORT: 587
+EMAIL_ID: <YOUR EMAIL ADDRESS>
+EMAIL_PASSWORD: <YOUR PASSWORD>
+VERIFY_EMAIL_HOST: http://localhost:${SERVER_PORT}
 
 # Allow CORS for static resources
 spring.web.resources.chain.enabled=true
 spring.web.resources.chain.strategy.content.enabled=true
 spring.web.resources.chain.strategy.content.paths=/**
 
+
+
+spring.mail.verify.host=your_host_value
+spring.mail.username=your_username
+spring.mail.password=your_password
+spring.mail.host=smtp.yourmailserver.com
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 # spring.mvc.static-path-pattern=/hotel_photos/**
 # spring.resources.static-locations=file:C:/Pfe/Reservation_hotels/hotel_photos/
