--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mvc.static-path-pattern=/hotel_photos/**
 spring.web.resources.static-locations=file:///C:/Pfe/Reservation_hotels/
 
+spring.web.resources.static-locations=file:///C:/Pfe/Reservation_Subscribe/subscribe_photos/
 
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
@@ -70,3 +71,8 @@ auth.grant_type=password
 auth.username=SMARTDEV
 auth.password=12345
 auth.client_id=ebankily
+logging.level.org.springframework.security=DEBUG
+spring.main.allow-bean-definition-overriding=true
+
+
+spring.web.resources.static-locations=file:///C:/Pfe/Reservation_Subscribe/subscribe_photos/
