--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.static-path-pattern=/hotel_photos/**
-spring.web.resources.static-locations=file:///C:/Pfe/Reservation_hotels/
+# spring.web.resources.static-locations=file:///C:/Pfe/Reservation_hotels/
 
-spring.web.resources.static-locations=file:///C:/Pfe/Reservation_Subscribe/subscribe_photos/
+# spring.web.resources.static-locations=file:///C:/Pfe/Reservation_Subscribe/subscribe_photos/
 
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
@@ -36,14 +36,20 @@ spring.web.resources.chain.strategy.content.paths=/**
 
 
 
-spring.mail.verify.host=your_host_value
-spring.mail.username=your_username
-spring.mail.password=your_password
-spring.mail.host=smtp.yourmailserver.com
+# Email Configuration
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
+spring.mail.username=hayatimeisse4@gmail.com 
+spring.mail.password=tiez fkyo ylur jzhl
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Default Email Sender
+app.mail.default-from=info@Grh.com
+app.mail.domain=localhost:5173
+app.mail.site-name=GRH app
+
 
 # spring.mvc.static-path-pattern=/hotel_photos/**
 # spring.resources.static-locations=file:C:/Pfe/Reservation_hotels/hotel_photos/
@@ -71,8 +77,9 @@ auth.grant_type=password
 auth.username=SMARTDEV
 auth.password=12345
 auth.client_id=ebankily
-logging.level.org.springframework.security=DEBUG
-spring.main.allow-bean-definition-overriding=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 
 
 spring.web.resources.static-locations=file:///C:/Pfe/Reservation_Subscribe/subscribe_photos/
