--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,11 @@ spring.application.name=Reservation-des-Hotels
 server.address=0.0.0.0
 server.port=9001
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/BDProj
+spring.datasource.url=jdbc:postgresql://localhost:5432/BDRES
 spring.datasource.username=postgres
 spring.datasource.password=Ha497857
 spring.datasource.driver-class-name=org.postgresql.Driver
+logging.level.org.springframework.web=DEBUG
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
