--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=Reservation-des-Hotels
 server.address=0.0.0.0
 server.port=9001
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/BDRES
-spring.datasource.username=postgres
-spring.datasource.password=Ha497857
+spring.datasource.url=jdbc:postgresql://pg-29fe6309-weddadienthah-2b0b.k.aivencloud.com:17129/BDRES
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_FlqkAvU03ZVMqmKNvqn
 spring.datasource.driver-class-name=org.postgresql.Driver
 logging.level.org.springframework.web=DEBUG
 
